--- a/fitable_frontend/pubspec.yaml
+++ b/fitable_frontend/pubspec.yaml
@@ -35,6 +35,17 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   http: ^1.6.0
+  firebase_core: ^4.2.1
+  firebase_auth: ^6.1.2
+  cloud_firestore: ^6.1.0
+  intl: ^0.20.2
+  google_fonts: ^6.3.2
+  lottie: ^3.3.2
+  flutter_animate: ^4.5.2
+  curved_navigation_bar: ^1.0.6
+  url_launcher: ^6.3.2
+  image_picker: ^1.2.1
+  firebase_storage: ^13.0.4
 
 dev_dependencies:
   flutter_test:
