Dockerfile python 3.11 ve paket duzeltmesi

--- a/Fitable_Backend/Dockerfile
+++ b/Fitable_Backend/Dockerfile
@@ -1,5 +1,5 @@
-# 1. Python 3.9 Slim (Hafif Sürüm)
-FROM python:3.9-slim
+# 1. Python 3.11 Slim (Daha Güncel Sürüm)
+FROM python:3.11-slim
 
 # 2. Gerekli sistem araçlarını yükle
 RUN apt-get update && apt-get install -y \
@@ -10,8 +10,7 @@ RUN apt-get update && apt-get install -y \
     ca-certificates \
     --no-install-recommends
 
-# 3. Google Chrome Kurulumu (YENİ MODERN YÖNTEM 🛠️)
-# apt-key yerine gpg --dearmor kullanıyoruz
+# 3. Google Chrome Kurulumu (Modern Linux Uyumlu)
 RUN wget -q -O - https://dl-ssl.google.com/linux/linux_signing_key.pub | gpg --dearmor -o /usr/share/keyrings/google-chrome.gpg \
     && echo "deb [arch=amd64 signed-by=/usr/share/keyrings/google-chrome.gpg] http://dl.google.com/linux/chrome/deb/ stable main" > /etc/apt/sources.list.d/google-chrome.list \
     && apt-get update \
@@ -22,8 +21,9 @@ RUN wget -q -O - https://dl-ssl.google.com/linux/linux_signing_key.pub | gpg --d
 # 4. Çalışma klasörünü ayarla
 WORKDIR /app
 
-# 5. Paketleri yükle
-RUN pip install --no-cache-dir fastapi uvicorn requests python-dotenv selenium webdriver-manager google-generativeai Pillow cloud_firestore firebase_admin
+# 5. Paketleri yükle (HATALI OLAN 'cloud_firestore' SİLİNDİ)
+# Sadece Python paketleri kaldı
+RUN pip install --no-cache-dir fastapi uvicorn requests python-dotenv selenium webdriver-manager google-generativeai Pillow firebase_admin
 
 # 6. Dosyaları kopyala
 COPY . .
