--- a/fitable_frontend/pubspec.yaml
+++ b/fitable_frontend/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   image_picker: ^1.2.1
   firebase_storage: ^13.0.4
   flutter_dotenv: ^6.0.0
+  flutter_riverpod: ^3.0.3
 
 dev_dependencies:
   flutter_test:
